refactor: 修改ffmpeg模块为bin模块

--- a/packages/bin/package.json
+++ b/packages/bin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bilibili-tools/ffmpeg",
+  "name": "@bilibili-tools/bin",
   "version": "0.0.0",
   "main": "lib/index.js",
   "scripts": {
