--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
-    "@bilibili-tools/ffmpeg": "*",
+    "@bilibili-tools/bin": "*",
     "classnames": "^2.2.6",
     "dayjs": "^1.8.26",
     "got": "^10.7.0",
